--- a/texlive-langcyrillic/PKGBUILD
+++ b/texlive-langcyrillic/PKGBUILD
@@ -3,19 +3,23 @@
 # Maintainer: Rémy Oudompheng <remy@archlinux.org>
 
 pkgname=texlive-langcyrillic
-pkgver=2021.60630
-_revnr=${pkgver#2021.}
+pkgver=2022.62517
+_revnr=${pkgver#2022.}
 pkgrel=1
 pkgdesc="TeX Live - Fonts and macro packages to typeset Cyrillic texts"
 license=('GPL')
 arch=(any)
 depends=('texlive-core')
+makedepends=('subversion')
 groups=('texlive-lang')
 url='http://tug.org/texlive/'
-source=("https://sources.archlinux.org/other/texlive/$pkgname-$pkgver-src.zip" "$pkgname.maps")
+source=("https://sources.archlinux.org/other/texlive/$pkgname-$pkgver-src.zip"
+        "$pkgname.maps"
+        "texlive-man::svn://tug.org/texlive/tags/texlive-2022.0/Master/texmf-dist/doc/man#revision=${_revnr}")
 options=('!emptydirs')
-sha256sums=('61ab70e93fe2e6fb42f697dc814f264593e7ee1962f199260cadfb1a8ade452b'
-            '313214980ace9c724766e9ffbfcfd3fb234fb97b3ff340508326f9712fc57770')
+sha256sums=('18834e4d4205574ebf1abe62fecbb92ca79bcd9a4428b981300392c94880c086'
+            '313214980ace9c724766e9ffbfcfd3fb234fb97b3ff340508326f9712fc57770'
+            'SKIP')
 
 build() {
    cd "$srcdir"
@@ -32,7 +36,7 @@ package() {
    install -m644 CONTENTS "$pkgdir/var/lib/texmf/arch/installedpkgs/${pkgname}_${_revnr}.pkgs"
    install -m644 $pkgname.maps "$pkgdir/var/lib/texmf/arch/installedpkgs/"
    install -m755 -d "$pkgdir/usr/share"
-   wanteddirs=$(for d in *; do test -d $d && [[ $d != texmf* ]] && echo $d; done) || true
+   wanteddirs=$(for d in *; do test -d $d && [[ $d != texmf* ]] && [[ $d != texlive-man ]] && echo $d; done) || true
    for dir in $wanteddirs; do
      find $dir -type d -exec install -d -m755 "$pkgdir"/usr/share/texmf-dist/'{}' \;
      find $dir -type f -exec install -m644 '{}' "$pkgdir"/usr/share/texmf-dist/'{}' \;
@@ -45,6 +49,9 @@ package() {
      find "$pkgdir/usr/share/texmf-dist/scripts" -type f -exec chmod a+x '{}' \;
    fi
    mkdir -p "${pkgdir}/usr/bin"
+   mkdir -p "${pkgdir}/usr/share/man/man1"
    ln -s /usr/share/texmf-dist/scripts/texlive-extra/rubibtex.sh "${pkgdir}/usr/bin/rubibtex"
    ln -s /usr/share/texmf-dist/scripts/texlive-extra/rumakeindex.sh "${pkgdir}/usr/bin/rumakeindex"
+   install -m644 "$srcdir/texlive-man/man1/rubibtex.1" "${pkgdir}/usr/share/man/man1/"
+   install -m644 "$srcdir/texlive-man/man1/rumakeindex.1" "${pkgdir}/usr/share/man/man1/"
 }
