--- a/java/jenkins/PKGBUILD
+++ b/java/jenkins/PKGBUILD
@@ -5,10 +5,10 @@
 # Contributor: Illarion Kovalchuk <illarion.kovalchuk at gmail dot com>
 
 pkgname=jenkins
-pkgver=2.311
+pkgver=2.344
 pkgrel=1
 pkgdesc='Extendable continuous integration server (latest)'
-arch=('any')
+arch=(any)
 url='https://jenkins.io'
 license=('MIT')
 depends=('java-runtime=11' 'ttf-dejavu')
@@ -25,8 +25,8 @@ source=("jenkins-${pkgver}.war::http://mirrors.jenkins-ci.org/war/${pkgver}/jenk
         'jenkins.tmpfiles'
         'jenkins.sysusers'
         'LICENSE')
-sha512sums=('78c2cba8de888db7df2b70dec2c93df9f47f8a78e43d5cad890ae95d4463ceb3a45aaa3c155414f32186c6b38d7c92527a281889358887668a74c381bdf10d05'
-            '03acaa9637b6d88b8bc63c3600069ff89a2c2c795f52ef5085d2f10228ba64ab52e10816a3a5db50a9c6d802384d388c48dbf8c9d5fbdb94b2dbb4e8bb00f682'
+sha512sums=('47062dda470a07936627e667047468c3738dd6ceffed254bd3fa5ef67b8f69b431452ac8ebc521940925747caad013b3de6848661df3ebbd9893bfaac91b0ed1'
+            'ba3e2d96ff3b776a24773c5d78f89b7fc9753eec5365fd71aa697aa0ccb708cac68c836d3caba4f3399988cf13bbffc0d681ac3160979a5ca8775882d998b063'
             '320e3d7bcdb78861e829e97be3ec37b8f1846737032ba70f624dfc5be86569d527279f53654a4a22d78b816ff1b07df429725a1d0a8059d44900d1095d1189ab'
             'a845a7147be54affc586dfce9a188ec24c92e673e88dec0b62da386d2e597de6ecda103429008562abd897f179a52c37cf2188ebc65b8c636efd07d707e18f90'
             '896cbc64eadb2f3bb9fa7fc26dbfc527b1823d8bff3158be7f1936cc250f55eeafe89079e1ceb8f3d269041662573ccbbb36248140b4ba24144a564366f8847a'
