--- a/js78/PKGBUILD
+++ b/js78/PKGBUILD
@@ -3,14 +3,16 @@
 
 pkgname=js78
 pkgver=78.15.0
-pkgrel=3
+pkgrel=4
 pkgdesc="JavaScript interpreter and libraries - Version 78"
 arch=(x86_64 powerpc64le powerpc riscv64)
+arch=(powerpc)
 url="https://developer.mozilla.org/en-US/docs/Mozilla/Projects/SpiderMonkey"
 license=(MPL)
 depends=(gcc-libs readline zlib sh)
 makedepends=(zip autoconf2.13 python-setuptools python-psutil rust llvm clang lld)
 checkdepends=(mercurial git)
+options=(!lto)
 _relver=${pkgver}esr
 _whissi_patches_ver=78esr-patches-20
 source=(https://archive.mozilla.org/pub/firefox/releases/$_relver/source/firefox-$_relver.source.tar.xz{,.asc}
