--- a/pciutils/PKGBUILD
+++ b/pciutils/PKGBUILD
@@ -1,8 +1,8 @@
 # POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Tobias Powalowski <tpowa@archlinux.org>
 pkgname=pciutils
-pkgver=3.7.0
-pkgrel=2
+pkgver=3.8.0
+pkgrel=1
 pkgdesc="PCI bus configuration space access library and tools"
 arch=(x86_64 powerpc64le powerpc riscv64)
 license=('GPL2')
@@ -15,9 +15,8 @@ source=(#ftp://ftp.kernel.org/pub/software/utils/${pkgname}/${pkgname}-${pkgver}
 validpgpkeys=(
               '5558F9399CD7836850553C6EC28E7847ED70F82D' # Martin Mares <mj@ucw.cz>
              )
-
-md5sums=('51554c538b5a57b61123326e14ea28a1'
-         'SKIP')
+sha256sums=('3f398d983aab42f3872e4e0ee9ecb1f0fd68f028e00246aa2ca7c3a7408d6fab'
+            'SKIP')
 
 build() {
   cd $pkgname-$pkgver
