--- a/gnupg/PKGBUILD
+++ b/gnupg/PKGBUILD
@@ -7,8 +7,8 @@
 # Contributor: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=gnupg
-pkgver=2.3.1
-pkgrel=1
+pkgver=2.2.32
+pkgrel=2
 pkgdesc='Complete and free implementation of the OpenPGP standard'
 url='https://www.gnupg.org/'
 license=('GPL')
@@ -27,14 +27,20 @@ validpgpkeys=(
 	'5B80C5754298F0CB55D8ED6ABCEF7E294B092E28' # Andre Heinecke (Release Signing Key)
 	'6DAA6E64A76D2840571B4902528897B826403ADA' # Werner Koch (dist signing 2020)
 )
-source=("https://gnupg.org/ftp/gcrypt/${pkgname}/${pkgname}-${pkgver}.tar.bz2"{,.sig})
-sha256sums=('c498db346a9b9a4b399e514c8f56dfc0a888ce8f327f10376ff984452cd154ec'
-            'SKIP')
+source=("https://gnupg.org/ftp/gcrypt/${pkgname}/${pkgname}-${pkgver}.tar.bz2"{,.sig}
+        'drop-import-clean.patch'
+				'avoid-beta-warning.patch')
+sha256sums=('b2571b35f82c63e7d278aa6a1add0d73453dc14d3f0854be490c844fca7e0614'
+            'SKIP'
+            '02d375f0045f56f7dd82bacdb5ce559afd52ded8b75f6b2673c39ec666e81abc'
+            '22fdf9490fad477f225e731c417867d9e7571ac654944e8be63a1fbaccd5c62d')
 
 install=install
 
 prepare() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
+	patch -p1 -i ../avoid-beta-warning.patch
+	patch -p1 -i ../drop-import-clean.patch
 
 	# improve reproducibility
 	rm doc/gnupg.info*
@@ -45,7 +51,7 @@ prepare() {
 build() {
 	cd "${srcdir}/${pkgname}-${pkgver}"
 	./configure \
-                --build=${CHOST} \
+	  --build=${CHOST} \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--sbindir=/usr/bin \
