--- a/libgee/PKGBUILD
+++ b/libgee/PKGBUILD
@@ -1,44 +1,49 @@
+# POWER Maintainer: Alexander Baldeck <alex.bldck@gmail.com>
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Ionut Biru <ibiru@archlinux.org>
 # Contributor: Sergej Pupykin <pupykin.s+arch@gmail.com>
 
 pkgname=libgee
-pkgver=0.20.4
-pkgrel=1
+pkgver=0.20.5
+pkgrel=2
 pkgdesc="A collection library providing GObject-based interfaces and classes for commonly used data structures"
-url="https://git.gnome.org/browse/libgee"
+url="https://gitlab.gnome.org/GNOME/libgee"
 license=(LGPL2.1)
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 depends=(glib2)
 makedepends=(gobject-introspection vala autoconf-archive git)
-_commit=db2efd468d32832ed787165ddda555706d888aca  # tags/0.20.4^0
+options=(debug)
+_commit=ab19a43592bb96ec8812058ea33a5b856b475bf4  # tags/0.20.5^0
 source=("git+https://gitlab.gnome.org/GNOME/libgee.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
-  cd $pkgname
-  git describe --tags | sed 's/-/+/g'
+  cd libgee
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
 }
 
 prepare() {
-  cd $pkgname
+  cd libgee
   NOCONFIGURE=1 ./autogen.sh
 }
 
 build() {
-  cd $pkgname
+  cd libgee
   ./configure --prefix=/usr --disable-static
   make
 }
 
 check() {
-  cd $pkgname
+  cd libgee
   # generates a bazillion traps - make sure systemd's core_pattern
   # is deactivated, or you'll DoS the journal and the system
   #make check
 }
 
 package() {
-  cd $pkgname
+  depends+=(libg{lib,object,io}-2.0.so)
+  provides+=(libgee-0.8.so)
+
+  cd libgee
   make DESTDIR="$pkgdir" install
 }
