--- a/libimagequant/PKGBUILD
+++ b/libimagequant/PKGBUILD
@@ -3,12 +3,13 @@
 
 pkgname=libimagequant
 pkgver=2.17.0
-pkgrel=1
+pkgrel=3
 pkgdesc="Library for high-quality conversion of RGBA images to 8-bit indexed-color (palette) images"
 arch=(x86_64 powerpc64le powerpc riscv64)
 url="https://pngquant.org/lib/"
 license=('BSD')
 depends=('gcc-libs')
+options=('debug')
 source=("https://github.com/ImageOptim/libimagequant/archive/$pkgver/libimagequant-$pkgver.tar.gz")
 sha256sums=('9f6cc50182be4d2ece75118aa0b0fd3e9bbad06e94fd6b9eb3a4c08129c2dd26')
 
