--- a/libjxl/PKGBUILD
+++ b/libjxl/PKGBUILD
@@ -4,17 +4,17 @@
 pkgbase=libjxl
 pkgname=('libjxl' 'libjxl-doc')
 pkgver=0.6.1
-pkgrel=2
+pkgrel=3
 pkgdesc='JPEG XL image format reference implementation'
 arch=(x86_64 powerpc64le powerpc riscv64)
 url='https://jpeg.org/jpegxl/'
 license=('BSD')
 makedepends=('git' 'cmake' 'clang' 'brotli' 'gdk-pixbuf2' 'giflib'
              'gperftools' 'libjpeg-turbo' 'libpng' 'openexr' 'gtest'
-             'java-environment' 'python' 'asciidoc' 'doxygen' 'graphviz'
+             'java-environment=11' 'python' 'asciidoc' 'doxygen' 'graphviz'
              'xdg-utils' 'highway')
 makedepends_x86_64=('gimp')
-options=('!lto')
+options=('!lto' '!distcc')
 source=("git+https://github.com/libjxl/libjxl.git#tag=v${pkgver}"
         'git+https://github.com/google/brotli.git'
         'git+https://github.com/lvandeve/lodepng.git'
@@ -73,7 +73,7 @@ check() {
 }
 
 package_libjxl() {
-    depends=('brotli')
+    depends=('brotli' 'giflib' 'gperftools' 'libjpeg-turbo' 'libpng' 'openexr')
     optdepends=('gdk-pixbuf2: for gdk-pixbuf loader'
                 'giflib: for CLI tools'
                 'gperftools: for CLI tools'
