--- a/libhandy/PKGBUILD
+++ b/libhandy/PKGBUILD
@@ -2,28 +2,29 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 # Contributor: Balló György <ballogyor+arch at gmail dot com>
 
-pkgname=libhandy
-pkgver=1.4.0
+pkgbase=libhandy
+pkgname=(libhandy libhandy-docs)
+pkgver=1.6.2
 pkgrel=1
 pkgdesc="Library full of GTK+ widgets for mobile phones"
 url="https://gitlab.gnome.org/GNOME/libhandy"
-arch=(x86_64 powerpc64le powerpc)
+arch=(x86_64 powerpc64le powerpc riscv64)
 license=(LGPL)
 depends=(glib2 gtk3)
-makedepends=(git gobject-introspection meson vala glade)
+makedepends=(git gobject-introspection meson vala glade gi-docgen)
 checkdepends=(xorg-server-xvfb)
-provides=(libhandy-1.so)
-_commit=f8626427acebfa08b2b4ee1166d51e416d3d7407  # tags/1.4.0^0
+options=(debug)
+_commit=f050453109db05621b9a47b9931fe1b571905e67  # tags/1.6.2^0
 source=("git+https://gitlab.gnome.org/GNOME/libhandy.git#commit=$_commit")
 sha256sums=('SKIP')
 
-prepare() {
-  cd libhandy
-}
-
 pkgver() {
   cd libhandy
-  git describe --tags | sed 's/^v//;s/-/+/g'
+  git describe --tags | sed 's/[^-]*-g/r&/;s/-/+/g'
+}
+
+prepare() {
+  cd libhandy
 }
 
 build() {
@@ -37,8 +38,20 @@ check() {
     meson test -C build --print-errorlogs
 }
 
-package() {
+package_libhandy() {
+  provides=(libhandy-1.so)
+
   meson install -C build --destdir "$pkgdir"
+
+  mkdir -p doc/usr/share
+  mv {"$pkgdir",doc}/usr/share/doc
+}
+
+package_libhandy-docs() {
+  pkgdesc+=" (documentation)"
+  depends=()
+
+  mv doc/* "$pkgdir"
 }
 
 # vim:set sw=2 et:
