--- a/julia/PKGBUILD
+++ b/julia/PKGBUILD
@@ -10,14 +10,16 @@
 pkgname=julia
 epoch=2
 pkgver=1.7.2
-pkgrel=1
-arch=(x86_64 powerpc64le powerpc riscv64)
+pkgrel=2
+arch=(x86_64 powerpc64le)
 pkgdesc='High-level, high-performance, dynamic programming language'
 url='https://julialang.org/'
 license=(MIT)
 depends=(cblas fftw hicolor-icon-theme libgit2 libunwind libutf8proc openblas
-	suitesparse mbedtls openlibm pcre2 llvm-libs p7zip)
+         suitesparse mbedtls openlibm pcre2 llvm-libs p7zip)
 depends_powerpc64le=(libblastrampoline)
+depends_riscv64=(libblastrampoline)
+depends_x86_64=(libblastrampoline)
 makedepends=(cmake gcc-fortran python llvm patchelf libwhich)
 optdepends=('gnuplot: If using the Gaston Package from julia')
 replaces=(julia-docs)
@@ -25,43 +27,53 @@ source=(https://github.com/JuliaLang/julia/releases/download/v$pkgver/$pkgname-$
         https://github.com/JuliaLang/julia/commit/677ce6d3.patch
         https://github.com/JuliaLang/julia/commit/47f9139e.patch
         https://github.com/JuliaLang/julia/commit/1eb063f1.patch
+        https://github.com/JuliaLang/julia/commit/99d4e655.patch
         f8c918b0.patch
         63303980.patch
         julia-libgit-1.2.patch
+        julia-libgit-1.4.patch
         julia-system-cblas.patch
         julia-hardcoded-libs.patch
         make-install-no-build.patch
         julia-llvm-patchelf.patch
         julia-libunwind-1.6.patch
-        julia-curl-7.81.patch)
+        julia-curl-7.81.patch
+        julia-libblastrampoline-4.patch)
 backup=(etc/julia/startup.jl)
-sha256sums=('add869121b7e788ff487a234fd39484469dbb3ded29b17041c63c4757515dd58'
+sha256sums=('c1b4f1f75aac34c40e81805cba2d87f1e72f9ce1405a525273c3688eee12366f'
             'SKIP'
             'a798c58ab518def84e4112538de59a10802e7dc854c20b08990a1619ba2aa95b'
             'c76c6fbb4e04b185d11e3c3e0aec99a2088f3b06621ce61d29cd21227a044a7a'
             '37130eabce304a01c1de389b4596905a3f33881f46f3f04a87f0738668e13985'
+            'c033fce112db85b02ebc1d3c8f8bac1240e0409ffdded7fd3322163834c41257'
             'bc6c85cbbca489ef0b2876dbeb6ae493c11573e058507b8bcb9e01273bc3a38c'
             'ce9cd140c3bc39987d60340bf365d6238e79cf4d5385494272c49c64af22ef78'
             'c57ea92a11fa8dac72229e6a912d2372ec0d98d63486426fe3bdeeb795de48f7'
+            'cfe498a090d0026b92f9db4ed65ac3818c2efa5ec83bcefed728d27abff73081'
             '8f8c12853ce847f5d1b5a4a461ddec701decdb81dae7bb31d66560c1deaed97a'
             '03043f005c133ac9af1d4dc113ea8b525ad3b393690625be77975f0e29dd6457'
             '8be4605f92a009072ca7e843549c225fc4e959893498e7c4f8f79e861e63714d'
             '6048c69c987f33f2b17d78b63368b0762d1d6a1e531ef9932d0c23bda49d1384'
             '3afa172e8b54ce48e77542677b2b7143199d444bfeed39be1644ce88b513a3d0'
-            '710587dd88c7698dc5cdf47a1a50f6f144b584b7d9ffb85fac3f5f79c65fce11')
+            '710587dd88c7698dc5cdf47a1a50f6f144b584b7d9ffb85fac3f5f79c65fce11'
+            '79cd957d0599a8ee1dbdf7f2ebd1a5bd85ab7e499584858e89a8d9609ba1ced4')
 validpgpkeys=('3673DF529D9049477F76B37566E3C7DC03D6E495') # Julia (Binary signing key) <buildbot@julialang.org>
+options=(!lto !distcc)
 
 prepare() {
   cd $pkgname-$pkgver
 
-# fix build with LLVM 13
+# fixes for LLVM 13
   patch -p1 -i ../677ce6d3.patch
   patch -p1 -i ../47f9139e.patch
   patch -p1 -i ../1eb063f1.patch
   patch -p1 -i ../f8c918b0.patch
   patch -p1 -i ../63303980.patch
+  patch -p1 -i ../99d4e655.patch
 # libgit2 1.2 compatibility
   patch -p1 -i ../julia-libgit-1.2.patch
+# libgit2 1.4 compatibility
+  patch -p1 -i ../julia-libgit-1.4.patch
 # libunwind 1.6 compatibility
   patch -p1 -i ../julia-libunwind-1.6.patch
 # Add and use option to build with system cblas
@@ -74,6 +86,8 @@ prepare() {
   sed -e 's|0.22314355f0 + 3.1415927f0im|0.22314355f0 - 3.1415927f0im|' -i stdlib/LinearAlgebra/test/lu.jl
 # Don't try to run patchelf on system LLVM
   patch -p1 -i ../julia-llvm-patchelf.patch
+# Port to libblastrampoline 4 API
+  patch -p1 -i ../julia-libblastrampoline-4.patch
 
 # Fix segfault with curl 7.81
   cd stdlib/srccache
@@ -98,7 +112,6 @@ _buildopts="prefix=/usr \
     USE_SYSTEM_LAPACK=1 \
     USE_SYSTEM_GMP=1 \
     USE_SYSTEM_MPFR=1 \
-    USE_SYSTEM_LIBSUITESPARSE=1 \
     USE_SYSTEM_LIBWHICH=1 \
     USE_SYSTEM_DSFMT=0 \
     USE_SYSTEM_LIBUV=0 \
@@ -113,8 +126,9 @@ _buildopts="prefix=/usr \
     USE_SYSTEM_OPENLIBM=1"
 
 case "${CARCH}" in
-  x86_64) _buildopts+=" MARCH=x86-64 USE_SYSTEM_LIBBLASTRAMPOLINE=1" ;;
-  powerpc64le) _buildopts+=" USE_SYSTEM_LIBBLASTRAMPOLINE=1" ;;
+  x86_64) _buildopts+=" MARCH=x86-64 USE_SYSTEM_LIBBLASTRAMPOLINE=1 USE_SYSTEM_LIBSUITESPARSE=1" ;;
+  powerpc64le) _buildopts+=" USE_SYSTEM_LIBBLASTRAMPOLINE=1 USE_SYSTEM_LIBSUITESPARSE=1" ;;
+  riscv64) _buildopts+=" USE_SYSTEM_LIBBLASTRAMPOLINE=1" ;;
 esac
 
 build() {
@@ -157,17 +171,3 @@ package() {
   rm "$pkgdir"/usr/lib/julia/libccalltest.so.debug # Remove debug testing library
   install -Dm644 LICENSE.md -t "$pkgdir"/usr/share/licenses/$pkgname
 }
-sha256sums=('c1b4f1f75aac34c40e81805cba2d87f1e72f9ce1405a525273c3688eee12366f'
-            'SKIP'
-            'a798c58ab518def84e4112538de59a10802e7dc854c20b08990a1619ba2aa95b'
-            'c76c6fbb4e04b185d11e3c3e0aec99a2088f3b06621ce61d29cd21227a044a7a'
-            '37130eabce304a01c1de389b4596905a3f33881f46f3f04a87f0738668e13985'
-            'bc6c85cbbca489ef0b2876dbeb6ae493c11573e058507b8bcb9e01273bc3a38c'
-            'ce9cd140c3bc39987d60340bf365d6238e79cf4d5385494272c49c64af22ef78'
-            'c57ea92a11fa8dac72229e6a912d2372ec0d98d63486426fe3bdeeb795de48f7'
-            '8f8c12853ce847f5d1b5a4a461ddec701decdb81dae7bb31d66560c1deaed97a'
-            '03043f005c133ac9af1d4dc113ea8b525ad3b393690625be77975f0e29dd6457'
-            '8be4605f92a009072ca7e843549c225fc4e959893498e7c4f8f79e861e63714d'
-            '6048c69c987f33f2b17d78b63368b0762d1d6a1e531ef9932d0c23bda49d1384'
-            '3afa172e8b54ce48e77542677b2b7143199d444bfeed39be1644ce88b513a3d0'
-            '710587dd88c7698dc5cdf47a1a50f6f144b584b7d9ffb85fac3f5f79c65fce11')
