--- a/wpewebkit/PKGBUILD
+++ b/wpewebkit/PKGBUILD
@@ -2,7 +2,7 @@
 # Maintainer: Jan Alexander Steffens (heftig) <heftig@archlinux.org>
 
 pkgname=wpewebkit
-pkgver=2.36.0
+pkgver=2.36.1
 pkgrel=1
 pkgdesc="Web content engine for embedded devices"
 url="https://wpewebkit.org"
@@ -19,14 +19,23 @@ optdepends=('geoclue: Geolocation support'
             'gst-plugins-good: media decoding'
             'gst-plugins-bad: media decoding'
             'gst-libav: nonfree media decoding')
-options=(!lto)
+options=(debug)
 source=($url/releases/$pkgname-$pkgver.tar.xz{,.asc})
-sha256sums=('301e895c8ed08ce7dccef3192b972f2ccfc2020463244c64069a636f2b05265f'
+sha256sums=('ec83d8b2f8c3479ce9950d69440f3b9876ab70200fe6f4e07686054a0cba5723'
             'SKIP')
 validpgpkeys=('D7FCF61CF9A2DEAB31D81BD3F3D322D0EC4582C3'  # Carlos Garcia Campos <cgarcia@igalia.com>
               '5AA3BC334FD7E3369E7C77B291C559DBE4C9123B') # Adrián Pérez de Castro <aperez@igalia.com>
 
+prepare() {
+  cd $pkgname-$pkgver
+}
+
 build() {
+  # Produce minimal debug info: 4.3 GB of debug data makes the
+  # build too slow and is too much to package for debuginfod
+  CFLAGS+=' -g1'
+  CXXFLAGS+=' -g1'
+
   cmake -S $pkgname-$pkgver -B build -G Ninja \
     -DPORT=WPE \
     -DCMAKE_BUILD_TYPE=Release \
@@ -34,6 +43,7 @@ build() {
     -DCMAKE_INSTALL_LIBDIR=lib \
     -DCMAKE_INSTALL_LIBEXECDIR=lib \
     -DCMAKE_SKIP_RPATH=ON \
+    -DUSE_SOUP2=OFF \
     -DENABLE_GTKDOC=ON \
     -DENABLE_MINIBROWSER=ON
   cmake --build build
@@ -56,5 +66,3 @@ package() {
 }
 
 # vim:set sw=2 et:
-sha256sums=('096aa9f87d9bfbfc80f558388a86721cdcc508b42ddef10bd270aec9aee96d5a'
-            'SKIP')
