--- a/wireplumber/PKGBUILD
+++ b/wireplumber/PKGBUILD
@@ -4,26 +4,23 @@
 
 pkgbase=wireplumber
 pkgname=(wireplumber wireplumber-docs)
-pkgver=0.4.7
+_commit=8b97b40c4467951fbd4181afb47e4175361365a6  # tags/0.4.9
+pkgver=0.4.9
 pkgrel=1
 pkgdesc="Session / policy manager implementation for PipeWire"
 url="https://pipewire.pages.freedesktop.org/wireplumber/"
-license=(MIT)
 arch=(x86_64 powerpc64le powerpc riscv64)
+license=(MIT)
 makedepends=(git meson doxygen graphviz 'pipewire>=0.3.43' systemd glib2 lua
              gobject-introspection python-sphinx python-sphinx_rtd_theme
              python-breathe python-lxml)
-_commit=afb177b5e0840d54dc41d02920702c3c9580ce02  # tags/0.4.7
+options=(debug)
 source=("$pkgbase::git+https://gitlab.freedesktop.org/pipewire/wireplumber.git#commit=$_commit")
 sha256sums=('SKIP')
 
 pkgver() {
   cd $pkgbase
-  git describe --tags | sed 's/-/+/g'
-}
-
-prepare() {
-  cd $pkgbase
+  git describe --tags | sed 's/\([^-]*-g\)/r\1/;s/-/./g'
 }
 
 build() {
